; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_selfuncs.c_rowcomparesel.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_selfuncs.c_rowcomparesel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rowcomparesel(i32* %0, %struct.TYPE_3__* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @linitial_oid(i32 %18)
  store i32 %19, i32* %12, align 4
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @linitial_oid(i32 %22)
  store i32 %23, i32* %13, align 4
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @linitial(i32 %26)
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @linitial(i32 %30)
  %32 = call i32* @list_make2(i32 %27, i32 %31)
  store i32* %32, i32** %14, align 8
  %33 = load i32, i32* %8, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %36

35:                                               ; preds = %5
  store i32 0, i32* %15, align 4
  br label %46

36:                                               ; preds = %5
  %37 = load i32*, i32** %10, align 8
  %38 = icmp eq i32* %37, null
  br i1 %38, label %39, label %40

39:                                               ; preds = %36
  store i32 0, i32* %15, align 4
  br label %45

40:                                               ; preds = %36
  %41 = load i32*, i32** %14, align 8
  %42 = call i32 @NumRelids(i32* %41)
  %43 = icmp sgt i32 %42, 1
  %44 = zext i1 %43 to i32
  store i32 %44, i32* %15, align 4
  br label %45

45:                                               ; preds = %40, %39
  br label %46

46:                                               ; preds = %45, %35
  %47 = load i32, i32* %15, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %57

49:                                               ; preds = %46
  %50 = load i32*, i32** %6, align 8
  %51 = load i32, i32* %12, align 4
  %52 = load i32*, i32** %14, align 8
  %53 = load i32, i32* %13, align 4
  %54 = load i32, i32* %9, align 4
  %55 = load i32*, i32** %10, align 8
  %56 = call i32 @join_selectivity(i32* %50, i32 %51, i32* %52, i32 %53, i32 %54, i32* %55)
  store i32 %56, i32* %11, align 4
  br label %64

57:                                               ; preds = %46
  %58 = load i32*, i32** %6, align 8
  %59 = load i32, i32* %12, align 4
  %60 = load i32*, i32** %14, align 8
  %61 = load i32, i32* %13, align 4
  %62 = load i32, i32* %8, align 4
  %63 = call i32 @restriction_selectivity(i32* %58, i32 %59, i32* %60, i32 %61, i32 %62)
  store i32 %63, i32* %11, align 4
  br label %64

64:                                               ; preds = %57, %49
  %65 = load i32, i32* %11, align 4
  ret i32 %65
}

declare dso_local i32 @linitial_oid(i32) #1

declare dso_local i32* @list_make2(i32, i32) #1

declare dso_local i32 @linitial(i32) #1

declare dso_local i32 @NumRelids(i32*) #1

declare dso_local i32 @join_selectivity(i32*, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @restriction_selectivity(i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
